# dbgview-mcp

./: .gitignore  AGENT_GUIDE.md  README.md  mcp_config.json  test_debug_app.py
.github/workflows/: publish.yml  test.yml
.venv-test/: pyvenv.cfg
.venv-test/Scripts/: activate  activate.bat
dbgcapture/: Makefile  dbgcapture.c
mcp_server/: README.md  pyproject.toml  test_capture.py
mcp_server/dbgcapture_mcp/: __init__.py  __main__.py  capture_manager.py  server.py
mcp_server/tests/: __init__.py  test_capture_manager.py  test_integration.py  test_server.py
